--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 aniso8601==9.0.1
+black==22.12.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
@@ -6,16 +9,24 @@ Flask-JWT-Extended==4.4.4
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==3.0.2
+Flask-Uploads==0.2.1
 greenlet==2.0.1
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 marshmallow==3.19.0
 marshmallow-sqlalchemy==0.28.1
+mypy-extensions==0.4.3
 packaging==22.0
+pathspec==0.10.3
+platformdirs==2.6.0
 PyJWT==2.6.0
 python-dotenv==0.21.0
 pytz==2022.7
+requests==2.28.1
 six==1.16.0
 SQLAlchemy==1.4.45
+tomli==2.0.1
+urllib3==1.26.13
 Werkzeug==2.2.2
