--- a/app/.env.example
+++ b/app/.env.example
@@ -3,7 +3,7 @@
 MAILGUM_DOMAIN=<YOUR_MAILGUN_DOMAIN_NAME>
 MAILGUM_API=<YOUR_MAILGUN_API_KEY>
 FROM_TITLE=<YOUR_NAME>
-DATABASE_URI=<YOUR_DATABASE_URI>
+DATABASE_URI=<YOUR_DATABASE_URL>
 SECRET_KEY=<YOUR_SECRET_KEY>
 CONFIRMATION_EXPIRATION_DELTA=<EXPIRATION_TIME_OF_CONFIRMATION_MAIL_IN_SECONDS>
 APPLICATION_SETTINGS=<YOUR_APP_CONFIGURATION_PYTHON_FILE>
