BUILT: Added oauth file

--- a/app/.env.example
+++ b/app/.env.example
@@ -7,3 +7,5 @@ DATABASE_URI=<YOUR_DATABASE_URL>
 SECRET_KEY=<YOUR_SECRET_KEY>
 CONFIRMATION_EXPIRATION_DELTA=<EXPIRATION_TIME_OF_CONFIRMATION_MAIL_IN_SECONDS>
 APPLICATION_SETTINGS=<YOUR_APP_CONFIGURATION_PYTHON_FILE>
+GITHUB_CONSUMER_KEY=<YOUR_GITHUB_CLIENT_ID>
+GUTHUB_CONSUMER_SECRET=<YOUR_GITHUB_CLIENT_SECRET>
