--- a/app/.env.example
+++ b/app/.env.example
@@ -9,4 +9,5 @@ CONFIRMATION_EXPIRATION_DELTA=<EXPIRATION_TIME_OF_CONFIRMATION_MAIL_IN_SECONDS>
 APPLICATION_SETTINGS=<YOUR_APP_CONFIGURATION_PYTHON_FILE>
 GITHUB_CONSUMER_KEY=<YOUR_GITHUB_CLIENT_ID>
 GUTHUB_CONSUMER_SECRET=<YOUR_GITHUB_CLIENT_SECRET>
-STRIPE_API_KEY=<YOUR_STRIPE_API_KEY>
+STRIPE_API_KEY=<YOUR_STRIPE_SECRET_KEY>
+STRIPE_PUBLISHABLE_KEY=<YOUR_STRIPE_PUBLISHABLE_KEY>
